# rust-llm-utils

./: .env.example  .gitignore  Cargo.toml  README.md
scripts/: get_available_open_ai_models.sh
src/: lib.rs
src/inner_prompt_template/: mod.rs
src/open_ai_api/: mod.rs
src/open_ai_api/open_ai/: mod.rs
src/prompt_types/: mod.rs
src/prompt_types/multi_shot_prompt/: mod.rs
src/prompt_types/zero_shot_prompt/: mod.rs
src/topic_prompts/: mod.rs
src/topic_prompts/programming/rust/fix_code/: mod.rs
src/topic_prompts/test_prompts/: mod.rs
tests/: open_ai_test.rs
tests/topic_prompts/: mod.rs
tests/topic_prompts/programming/rust/: mod.rs
tests/topic_prompts/programming/rust/fix_code/: mod.rs
tests/topic_prompts/test_prompts/: mod.rs
